force-app/main/default/objects/Hospital__c/Hospital__c.object-meta.xml
<CustomObject>
    <label>Hospital</label>
    <nameField>
        <displayFormat>HI-{00000}</displayFormat>
        <label>Hospital Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hospitals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>