force-app/main/default/objects/Hospital__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>The city of the Hospital.</description>
    <label>City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>