force-app/main/default/objects/Hospital__c/fields/Star__c.field-meta.xml
<CustomField>
    <fullName>Star__c</fullName>
    <description>total feedback is given by the Patients.</description>
    <label>Star</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>