force-app/main/default/objects/Hospital__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <description>State of the Hospital.</description>
    <label>State/Province</label>
    <length>80</length>
    <type>Text</type>
</CustomField>