force-app/main/default/objects/Hospital__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street address of the Hospital</description>
    <label>Street</label>
    <type>TextArea</type>
</CustomField>