force-app/main/default/objects/Hospital__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <description>Zip code of the Hospital.</description>
    <label>Zip/Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>